fix: corregir tests ms-ventas y ms-logistica para que coincidan con paquetes y clases reales