@@ -1,66 +1,57 @@
 package com.smartlogix.ventas.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.smartlogix.ventas.entity.Pedido;
-import com.smartlogix.ventas.service.VentaService;
+import com.smartlogix.msventas.controller.PedidoController;
+import com.smartlogix.msventas.model.Pedido;
+import com.smartlogix.msventas.service.PedidoService;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Arrays;
 import java.util.List;
 
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@WebMvcTest(VentaController.class)
-class VentaControllerTest {
+@WebMvcTest(PedidoController.class)
+public class VentaControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
     @MockBean
-    private VentaService ventaService;
-
-    @Autowired
-    private ObjectMapper objectMapper;
+    private PedidoService pedidoService;
 
     @Test
-    void getAll_retornaLista200() throws Exception {
-        Pedido p = new Pedido();
-        when(ventaService.listarTodos()).thenReturn(List.of(p));
+    void listarPedidos_debeRetornarLista() throws Exception {
+        Pedido p1 = new Pedido();
+        Pedido p2 = new Pedido();
+        List<Pedido> lista = Arrays.asList(p1, p2);
+
+        when(pedidoService.listarTodos()).thenReturn(lista);
 
         mockMvc.perform(get("/api/pedidos"))
                 .andExpect(status().isOk());
     }
 
     @Test
-    void getById_retorna200() throws Exception {
-        Pedido p = new Pedido();
-        when(ventaService.buscarPorId(1L)).thenReturn(p);
+    void listarPedidos_listaVacia_debeRetornarOk() throws Exception {
+        when(pedidoService.listarTodos()).thenReturn(Arrays.asList());
 
-        mockMvc.perform(get("/api/pedidos/1"))
+        mockMvc.perform(get("/api/pedidos"))
                 .andExpect(status().isOk());
     }
 
     @Test
-    void crear_retorna200() throws Exception {
+    void listarPedidos_debeRetornarJson() throws Exception {
         Pedido p = new Pedido();
-        when(ventaService.guardar(any())).thenReturn(p);
+        when(pedidoService.listarTodos()).thenReturn(Arrays.asList(p));
 
-        mockMvc.perform(post("/api/pedidos")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(p)))
-                .andExpect(status().isOk());
-    }
-
-    @Test
-    void eliminar_retorna200() throws Exception {
-        mockMvc.perform(delete("/api/pedidos/1"))
-                .andExpect(status().isOk());
+        mockMvc.perform(get("/api/pedidos"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentTypeCompatibleWith("application/json"));
     }
 }
