@@ -1,26 +1,28 @@
 package com.smartlogix.ventas.service;
 
-import com.smartlogix.ventas.entity.Pedido;
-import com.smartlogix.ventas.repository.PedidoRepository;
+import com.smartlogix.msventas.model.Pedido;
+import com.smartlogix.msventas.repository.PedidoRepository;
+import com.smartlogix.msventas.service.PedidoService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-class VentaServiceTest {
+public class VentaServiceTest {
 
     @Mock
     private PedidoRepository pedidoRepository;
 
     @InjectMocks
-    private VentaService ventaService;
+    private PedidoService pedidoService;
 
     @BeforeEach
     void setUp() {
@@ -28,49 +30,46 @@ class VentaServiceTest {
     }
 
     @Test
-    void listarTodos_retornaListaNoVacia() {
-        Pedido p = new Pedido();
-        when(pedidoRepository.findAll()).thenReturn(List.of(p));
+    void listarTodos_debeRetornarLista() {
+        Pedido p1 = new Pedido();
+        Pedido p2 = new Pedido();
+        when(pedidoRepository.findAll()).thenReturn(Arrays.asList(p1, p2));
 
-        List<Pedido> result = ventaService.listarTodos();
+        List<Pedido> resultado = pedidoService.listarTodos();
 
-        assertFalse(result.isEmpty());
-        assertEquals(1, result.size());
+        assertNotNull(resultado);
+        assertEquals(2, resultado.size());
+        verify(pedidoRepository, times(1)).findAll();
     }
 
     @Test
-    void guardar_llamaRepositoryYRetornaPedido() {
+    void listarTodos_repositorioVacio_debeRetornarListaVacia() {
+        when(pedidoRepository.findAll()).thenReturn(Arrays.asList());
+
+        List<Pedido> resultado = pedidoService.listarTodos();
+
+        assertNotNull(resultado);
+        assertTrue(resultado.isEmpty());
+    }
+
+    @Test
+    void guardar_debeRetornarPedidoGuardado() {
         Pedido p = new Pedido();
         when(pedidoRepository.save(p)).thenReturn(p);
 
-        Pedido result = ventaService.guardar(p);
+        Pedido resultado = pedidoService.guardar(p);
 
-        assertNotNull(result);
+        assertNotNull(resultado);
         verify(pedidoRepository, times(1)).save(p);
     }
 
     @Test
-    void buscarPorId_cuandoExiste_retornaPedido() {
+    void buscarPorId_debeRetornarPedido() {
         Pedido p = new Pedido();
         when(pedidoRepository.findById(1L)).thenReturn(Optional.of(p));
 
-        Pedido result = ventaService.buscarPorId(1L);
+        Optional<Pedido> resultado = pedidoService.buscarPorId(1L);
 
-        assertNotNull(result);
-    }
-
-    @Test
-    void buscarPorId_cuandoNoExiste_retornaNull() {
-        when(pedidoRepository.findById(99L)).thenReturn(Optional.empty());
-
-        Pedido result = ventaService.buscarPorId(99L);
-
-        assertNull(result);
-    }
-
-    @Test
-    void eliminar_llamaDeleteById() {
-        ventaService.eliminar(1L);
-        verify(pedidoRepository, times(1)).deleteById(1L);
+        assertTrue(resultado.isPresent());
     }
 }
